# OpenAITGBot

./: .gitignore  README.md  main.py  manage_migrations.py  pyproject.toml
bot/: __init__.py  config.py  database.py  messages.py  models.py  states.py
bot/handlers/: __init__.py  command_handlers.py  generation_handlers.py  image_handlers.py  payment_handlers.py
bot/keyboards/: package_keyboards.py
bot/middleware/: rate_limit.py
bot/migrations/: m_001_initial_schema.py  m_002_add_generation_stats.py  m_002_user_balances.py  m_003_user_balances.py  m_004_generation_queue.py  m_005_optimize_queue_indices.py  migration_system.py
bot/repositories/: base.py  sqlite.py
bot/services/: __init__.py  balance_service.py  openai_service.py  payment_service.py  queue_service.py  telegram_service.py
openai_tg_bot/: __init__.py  config.py  database.py  messages.py  states.py
openai_tg_bot/handlers/: command_handlers.py  generation_handlers.py  image_handlers.py  payment_handlers.py
openai_tg_bot/middleware/: rate_limit.py
openai_tg_bot/migrations/: m_001_initial_schema.py  m_002_add_generation_stats.py
openai_tg_bot/services/: openai_service.py  payment_service.py  telegram_service.py
