[project]
name = "openai-tg-bot"
version = "0.1.0"
description = "Telegram bot for image generation using OpenAI"
dependencies = [
    "aiogram>=3.21.0",
    "aiohttp>=3.12.14",
    "openai>=1.97.1",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
